--- a/NS2_1.ipynb
+++ b/NS2_1.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/madenni/NeuralNetworks/blob/main/NS2_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -1118,17 +1129,6 @@
       "metadata": {
         "id": "-IFadu85UZqU"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Ваш вывод здесь"
-      ],
-      "metadata": {
-        "id": "I0XP83bgUfnt"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
